[gd_scene load_steps=32 format=3 uid="uid://dn0j10y4yctsu"]

[ext_resource type="Script" path="res://rocket.gd" id="1_hehsm"]
[ext_resource type="PackedScene" uid="uid://b1g6bplfhhfju" path="res://Mesh/parachute/scene.gltf" id="2_i8lea"]
[ext_resource type="Shader" path="res://particles.gdshader" id="3_71fyw"]
[ext_resource type="ArrayMesh" uid="uid://dh0nus55l3nb" path="res://Mesh/newRocket.tres" id="3_p36nn"]
[ext_resource type="ArrayMesh" uid="uid://b68kb8xhfoocs" path="res://Mesh/booster.tres" id="5_ajmhi"]
[ext_resource type="Script" path="res://booster.gd" id="5_on45h"]
[ext_resource type="PackedScene" uid="uid://bg8h443q0tl6" path="res://Scenes/explosion.tscn" id="6_a3gqf"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_hpl6m"]
height = 5.34061
radius = 1.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_d3eem"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_a37k5"]
render_priority = 0
shader = ExtResource("3_71fyw")
shader_parameter/max_emission_strength = 8.0

[sub_resource type="Gradient" id="Gradient_ohpla"]
offsets = PackedFloat32Array(0, 0.518182, 1)
colors = PackedColorArray(0.649337, 0.00104078, 0.764744, 1, 0.8505, 0.61, 1, 1, 0.892333, 0.62, 1, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_d0smq"]
gradient = SubResource("Gradient_ohpla")

[sub_resource type="Curve" id="Curve_jiqep"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_r01pq"]
curve = SubResource("Curve_jiqep")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_n2pvn"]
direction = Vector3(0, -1, 0)
spread = 0.0
initial_velocity_min = 5.0
initial_velocity_max = 5.0
gravity = Vector3(0, 0, 0)
linear_accel_min = -2.0
linear_accel_max = -2.0
scale_curve = SubResource("CurveTexture_r01pq")
color_ramp = SubResource("GradientTexture1D_d0smq")
collision_mode = 1
collision_friction = 1.0
collision_bounce = 0.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_0evy7"]
transparency = 1
shading_mode = 0
vertex_color_use_as_albedo = true

[sub_resource type="SphereMesh" id="SphereMesh_87v3g"]
lightmap_size_hint = Vector2i(17, 9)
material = SubResource("StandardMaterial3D_0evy7")

[sub_resource type="Curve" id="Curve_mu8pg"]
min_value = -200.0
max_value = 200.0
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_q1m23"]
curve = SubResource("Curve_mu8pg")

[sub_resource type="Curve" id="Curve_xergh"]
_data = [Vector2(0, 0.142857), 0.0, 0.0, 0, 0, Vector2(0.123188, 0.747253), 0.0, 0.0, 0, 0, Vector2(1, 0.736264), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_31i4j"]
curve = SubResource("Curve_xergh")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_l5uwh"]
particle_flag_align_y = true
particle_flag_rotate_y = true
direction = Vector3(0, -1, 0)
spread = 2.0
initial_velocity_min = 30.0
initial_velocity_max = 50.0
gravity = Vector3(0, 0, 0)
linear_accel_min = -10.0
linear_accel_max = -2.23517e-06
linear_accel_curve = SubResource("CurveTexture_q1m23")
scale_min = 6.0
scale_max = 6.0
scale_curve = SubResource("CurveTexture_31i4j")
collision_mode = 1
collision_friction = 0.0
collision_bounce = 0.0
collision_use_scale = true

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_l0kj7"]
render_priority = -1
transparency = 1
diffuse_mode = 3
disable_fog = true
albedo_color = Color(1, 1, 1, 0.0901961)
billboard_mode = 3
billboard_keep_scale = true
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="SphereMesh" id="SphereMesh_6dowa"]
material = SubResource("StandardMaterial3D_l0kj7")
radius = 1.0
height = 2.0
radial_segments = 16
rings = 8

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_ex30y"]

[sub_resource type="Curve" id="Curve_e5n6x"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_ip4or"]
curve = SubResource("Curve_e5n6x")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_0ec3a"]
direction = Vector3(0, -1, 0)
spread = 0.0
initial_velocity_min = 5.0
initial_velocity_max = 5.0
gravity = Vector3(0, 0, 0)
linear_accel_min = -2.0
linear_accel_max = -2.0
scale_curve = SubResource("CurveTexture_ip4or")
color_ramp = SubResource("GradientTexture1D_d0smq")
collision_mode = 1
collision_friction = 1.0
collision_bounce = 0.0

[sub_resource type="SphereMesh" id="SphereMesh_asgt8"]
lightmap_size_hint = Vector2i(17, 9)
material = SubResource("StandardMaterial3D_0evy7")
radius = 0.6
height = 2.0

[sub_resource type="CylinderShape3D" id="CylinderShape3D_boopy"]
margin = 0.5
height = 8.214
radius = 0.6

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_r7j40"]
bounce = 1.0

[node name="Rocket" type="CharacterBody3D"]
script = ExtResource("1_hehsm")
parachute = ExtResource("2_i8lea")

[node name="RocketCollision" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.66784, 0)
shape = SubResource("CylinderShape3D_hpl6m")

[node name="RocketModel" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 4.16177, 0)
mesh = ExtResource("3_p36nn")
surface_material_override/0 = SubResource("StandardMaterial3D_d3eem")

[node name="RocketExhaust" type="GPUParticles3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00337219, 0.188084, -0.0142193)
material_override = SubResource("ShaderMaterial_a37k5")
amount = 100
lifetime = 0.75
collision_base_size = 1.0
process_material = SubResource("ParticleProcessMaterial_n2pvn")
draw_pass_1 = SubResource("SphereMesh_87v3g")

[node name="RocketTrail" type="GPUParticles3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.256104, -3.67355, -0.00268555)
amount = 1000
lifetime = 20.0
collision_base_size = 1.0
visibility_aabb = AABB(-33.3999, -940.053, -33.7817, 67.3138, 942.053, 67.29)
process_material = SubResource("ParticleProcessMaterial_l5uwh")
draw_pass_1 = SubResource("SphereMesh_6dowa")

[node name="Booster" type="RigidBody3D" parent="."]
physics_material_override = SubResource("PhysicsMaterial_ex30y")
gravity_scale = 0.0
can_sleep = false
contact_monitor = true
max_contacts_reported = 1
script = ExtResource("5_on45h")
explosion_scene = ExtResource("6_a3gqf")

[node name="BoosterModel" type="MeshInstance3D" parent="Booster"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0180075, 4.25614, -0.958404)
mesh = ExtResource("5_ajmhi")

[node name="BoosterExhaust" type="GPUParticles3D" parent="Booster"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00337219, 0.402875, -1.51223)
material_override = SubResource("ShaderMaterial_a37k5")
amount = 100
lifetime = 0.5
collision_base_size = 1.0
process_material = SubResource("ParticleProcessMaterial_0ec3a")
draw_pass_1 = SubResource("SphereMesh_asgt8")

[node name="BoosterTrail" type="GPUParticles3D" parent="Booster"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.256104, -1.76694, -1.53832)
amount = 1000
lifetime = 20.0
collision_base_size = 1.0
visibility_aabb = AABB(-33.3999, -940.053, -33.7817, 67.3138, 942.053, 67.29)
process_material = SubResource("ParticleProcessMaterial_l5uwh")
draw_pass_1 = SubResource("SphereMesh_6dowa")

[node name="BoosterCollision" type="CollisionShape3D" parent="Booster"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5.77086, -1.48351)
shape = SubResource("CylinderShape3D_boopy")

[node name="Booster2" type="RigidBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 3.05873)
physics_material_override = SubResource("PhysicsMaterial_r7j40")
gravity_scale = 0.0
contact_monitor = true
max_contacts_reported = 1
script = ExtResource("5_on45h")

[node name="BoosterModel" type="MeshInstance3D" parent="Booster2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0180075, 4.25614, -1.0302)
mesh = ExtResource("5_ajmhi")
skeleton = NodePath("../../Booster2")

[node name="BoosterExhaust" type="GPUParticles3D" parent="Booster2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00337219, 0.402875, -1.56894)
material_override = SubResource("ShaderMaterial_a37k5")
amount = 100
lifetime = 0.5
collision_base_size = 1.0
process_material = SubResource("ParticleProcessMaterial_0ec3a")
draw_pass_1 = SubResource("SphereMesh_asgt8")

[node name="BoosterTrail" type="GPUParticles3D" parent="Booster2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.256104, -1.87117, -1.50763)
amount = 1000
lifetime = 20.0
collision_base_size = 1.0
visibility_aabb = AABB(-33.3999, -940.053, -33.7817, 67.3138, 942.053, 67.29)
process_material = SubResource("ParticleProcessMaterial_l5uwh")
draw_pass_1 = SubResource("SphereMesh_6dowa")

[node name="BoosterCollision" type="CollisionShape3D" parent="Booster2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.00232697, 5.77086, -1.4561)
shape = SubResource("CylinderShape3D_boopy")

[connection signal="body_entered" from="Booster" to="Booster" method="_on_body_entered"]
[connection signal="body_shape_entered" from="Booster" to="Booster" method="_on_body_shape_entered"]
[connection signal="body_shape_entered" from="Booster2" to="." method="_on_booster_2_body_shape_entered"]
